# LazyData

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
include/: my_application.hpp
include/app/: animated_drawer.hpp  app_properties.hpp  base_imgui_app.hpp  base_node_editor_app.hpp  base_sfml_app.hpp  font_loader.hpp  imgui_helpers.hpp  toggle_button.hpp
include/dataflow/: callbacks.hpp  constants_and_defaults.hpp  data.hpp  data_flow.hpp  lazy_data_editor.hpp  link.hpp  link_manager.hpp  matrix_table_ui.hpp  node.hpp  node_manager.hpp  node_styling.hpp  pin.hpp  selector_ui.hpp  study.hpp
include/dataflow/menus/: menu_base.hpp  menu_data_augmenting.hpp  menu_data_matrix_operations.hpp  menu_data_sources.hpp  menu_data_splicing.hpp  menu_data_visualization.hpp  menu_properties.hpp  menus.hpp
include/dataflow/specialized_nodes/: augment_node.hpp  csv_loader_node.hpp  heat_map_node.hpp  image_loader_node.hpp  matrix_source_node.hpp  plot_node.hpp  roi_node.hpp  selector_node.hpp  specialized_nodes.hpp  table_node.hpp  unary_operator_node.hpp
include/datagraph/: constants_and_defaults.hpp  data.hpp  data_graph.hpp  datagraph.hpp  debugging_functions.hpp  graph.hpp  link.hpp  link_manager.hpp  node.hpp  node_manager.hpp  pin.hpp  serializer.hpp
include/timers/: timer.hpp
include/utils/: file_browser.hpp  native_file_dialog.hpp  unique_id.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_graph_compute_update.cpp  test_graph_saving.cpp  test_graph_serialize_deserialize.cpp  test_node_graph.cpp
toolchains/: mingw-w64-toolchain.cmake
